frontend/test/should_fail/cast_node_object_exec.grg
using cast_model;

rule r {
	n:N;
	
	modify {
	---
		def ref o:O;
		exec ({
			o = (O)n
		});
	}
}
